// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeeSwitcher should match snapshot when account is enabled  1`] = `
<DocumentFragment>
  <div
    class="sc-eeDRCY bCYpHf"
  >
    <div
      class="sc-iHGNWf hMJwVs"
    >
      <p
        class="sc-dAlyuH eGlSty sc-dtBdUo zuBuN"
      >
        Fee
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall sc-bmzYkS lbmjGV css-ptiqhd-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
        />
      </svg>
    </div>
    <div
      class="sc-fPXMVe ceppIJ dropdown sc-kOHTFB bNsXmw"
    >
      <div
        class="sc-gFqAkR bIEbk dropdown sc-kOHTFB bNsXmw"
      >
        <div
          class="sc-feUZmu hAnnvI"
        >
          <div
            class="sc-ikkxIA cMogLc"
          >
            <img
              alt="token"
              src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/undefined.svg"
              width="20px"
            />
          </div>
          <p
            class="sc-dAlyuH eGlSty"
          />
          <div
            class="sc-bXCLTC cVmHtU dropdown sc-kOHTFB bNsXmw"
          >
            <div>
              <div
                data-src="arrowdown.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeeSwitcher should match snapshot when account is not enabled  1`] = `
<DocumentFragment>
  <div
    class="sc-eeDRCY bCYpHf"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall sc-bmzYkS lbmjGV css-ptiqhd-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="HelpOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
      />
    </svg>
    <h5
      class="sc-eldPxv jsmXlI sc-koXPp bYAwUU"
    >
      Fee
    </h5>
  </div>
</DocumentFragment>
`;
